# instrument-panel

./: README.md
instrument-panel/: README.md  package-lock.json  package.json
instrument-panel/src/: App.css  App.tsx
instrument-panel/src-tauri/: Cargo.toml  tauri.conf.json
instrument-panel/src-tauri/capabilities/: default.json
instrument-panel/src-tauri/src/: commands.rs  lib.rs  main.rs
instrument-panel/src-tauri/src/hwinfo/: mock.rs  mod.rs  process.rs  shared_memory.rs  types.rs
instrument-panel/src/components/: CpuCard.tsx  DataSourceCard.tsx  GpuCard.tsx  MetricCard.tsx  SetupGuide.tsx  StorageCard.tsx  SystemCard.tsx  ViewSelector.tsx
instrument-panel/src/components/views/: CpuDetailView.tsx  GpuDetailView.tsx  OverviewView.tsx  StorageDetailView.tsx
instrument-panel/src/hooks/: useSensorData.ts  useSettings.ts
instrument-panel/src/types/: sensors.ts
